--- a/dnd5e-mobile.html
+++ b/dnd5e-mobile.html
@@ -3,7 +3,6 @@
 <head>
 <title>DnD-5E-角色卡</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no, viewport-fit=cover" />
 <style>
 body, input, select, textarea, button, td, div{
     font-size: 0.3rem;
@@ -16,7 +15,7 @@ nav a.actived_tab {
     display: none;
 }
 .actived_div{
-    display: inline;
+    display: block;
     width: 7.5rem;
 }
 table{
@@ -163,6 +162,9 @@ function switch_tab(target){
                 var textareas  = document.getElementsByTagName("textarea");
                 for (var i = 0; i < textareas.length; i++) {
                     textareas[i].value = character_json[textareas[i].id];
+                    if (textareas[i].id.indexOf("attatck") != -1) {
+                        textareas[i].value +="\n"+character_json[textareas[i].id.replace(/damage/g,"remark")];
+                    }
                     textareas[i].value = textareas[i].value.replace(/<换行>/g,"\n");
                 }
 
@@ -180,6 +182,7 @@ function switch_tab(target){
 </script>
 </head>
 <body> 
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no, viewport-fit=cover" />
 <nav>
     <a href="javascript:;" id="ability_nav" onclick="switch_tab(this)" class="actived_tab">属性</a>
     <a href="javascript:;" id="skill_nav" onclick="switch_tab(this)">技能</a>
@@ -717,6 +720,7 @@ function switch_tab(target){
     <br>
     <button onclick="(function(){document.querySelector('#console_div').style.display='none';})()">关闭控制窗口</button>
 </div>
+</meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no, viewport-fit=cover" />
 </body>
 </html>
 
